# weatherist

./: .gitignore  2021.txt  2022.txt  Cargo.toml  notes.md  test.txt
db/: seeds.sql
db/migrations/: 20221216120130_create_user.sql  20221219163403_create_spot.sql
db/seeds/: seeds.sql  spots_seed.sql
src/: main.d.rs  main.rs  recipe.rs  response.rs  seeds.rs  spot.rs  user.rs
