[package]
name = "weatherist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4"
chrono = {version="0.4.23", features = ["serde"]}
env_logger = "0.9.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = {version = "1.2.2", features = ["v4","fast-rng","macro-diagnostics","serde"]}
dotenv = "0.15.0"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
time = {version="0.3.17", features=["serde"]}
